ci: 🎡 update workflows

--- a/.github/workflows/testnet-package.yaml
+++ b/.github/workflows/testnet-package.yaml
@@ -21,7 +21,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ secrets.REPOSITORY_REGION }}-docker.pkg.dev/${{ secrets.PROJECT_ID }}/${{ secrets.REPOSITORY }}/ebridge-telegram-bot-server # change this to your project frontend name​
+          images: ${{ secrets.REPOSITORY_REGION }}-docker.pkg.dev/${{ secrets.PROJECT_ID }}/${{ secrets.REPOSITORY }}/ebridge-telegram-bot-server # change this to your project frontend name
           tags: |
             type=sha
       - name: Set up Docker Buildx
@@ -54,12 +54,12 @@ jobs:
           github-token: ${{ secrets.TOK }}
           script: |
             await github.rest.actions.createWorkflowDispatch({
-              owner: 'eBridgeProject',
+              owner: 'eBridgeCrosschain',
               repo: 'devops',
               workflow_id: 'deployment_testnet.yaml',
               ref: 'main',
               inputs: {
-                appName: 'eBridge-bot',
+                appName: 'ebridge-telegram-bot-server',
                 commit_sha: 'sha-${{ needs.build-and-push-image.outputs.short_sha }}',
               }
             })
